SUBDIRS = SDL
noinst_LTLIBRARIES = libOpenGLCommon.la
libOpenGLCommon_la_SOURCES = Bitmap.cpp GLCamera.cpp GLFont.cpp GLGlobals.cpp GLGraphics.cpp GLMaterial.cpp GLPolygonMesh.cpp GLTexture.cpp GLViewport.cpp GLPolygonFlat.cpp GLPolygonBillboard.cpp
libOpenGLCommon_la_LIBADD = @top_srcdir@/Source/Math/libFrameworkMath.la
