
####CPPFLAGS = @CPPFLAGS@ 
##  -DOGL

## INCLUDES = -I@top_srcdir@/Include
noinst_LTLIBRARIES = libOpenGLLinux.la
libOpenGLLinux_la_SOURCES = GLLinuxGraphics.cpp
##libOpenGLLinux_la_LIBADD =  @SDL_LIBS@ @top_srcdir@/Source/Math/libFrameworkMath.la
##libOpenGLLinux_la_LDFLAGS = @GL_LIBS@
libOpenGLLinux_la_LIBADD =  @top_srcdir@/Source/Math/libFrameworkMath.la
